--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This is the official list of authors for copyright purposes.
 
 Yohann Leon <yohann@leon.re>
+Quentin Barbarat <q.barbarat@gmail.com>
